--- a/StickyNotes.css
+++ b/StickyNotes.css
@@ -4,6 +4,15 @@
     background-color: #FFD357;
 }
 
+.noteCloseBtn {
+    margin: 2px;
+    position: absolute;
+    right: 5%;
+    font-size: larger;
+    background-color: #FFD357;
+    border: solid black 1px;
+}
+
 .noteBtnDiv {
     margin-left: 10px;
     margin-bottom: 5px;
@@ -13,13 +22,6 @@
     margin-left: 3px;
     margin-right: 3px;
     border: solid black 2px;
-}
-
-.noteCloseBtn {
-    margin: 2px;
-    position: absolute;
-    right: 5%;
-    font-size: larger;
 }
 
 .noteTextArea {
