--- a/pub/style.css
+++ b/pub/style.css
@@ -1,3 +1,24 @@
+body {
+    display: flex;
+    justify-content: center;
+}
+
+a {
+    text-decoration: none;
+    color: #66ccff;
+    cursor: pointer;
+}
+
+#landing_container {
+    max-width: 70vw;
+}
+
+#landing_header {
+    /*margin: 3%;*/
+    margin-top: 3%;
+}
+
+
 #content {
     margin-right: 20%;
     margin-left: 20%;
