--- a/pub/style.css
+++ b/pub/style.css
@@ -18,6 +18,18 @@ a {
     margin-top: 3%;
 }
 
+#example-instance {
+    display: flex;
+    width: 50%;
+    border-radius: 5px;
+    border: 3px solid gray;
+    padding: 20px;
+}
+
+#example-img {
+    height: 300px;
+}
+
 
 .content {
     margin: 1.5em 10%;
